[tool.poetry]
name = "Dungeons"
version = "0.0.0"
description = ""
authors = ["Gabriel Sarmento <gabrielfs.bot@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/is-gabs/dungeons"
classifiers=[
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
rpgtk = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
isort = "^5.10.1"
flake8 = "^4.0.1"
bumpversion = "^0.6.0"

[tool.isort]
atomic=true
line_length=79
multi_line_output=3
use_parentheses=true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
